force-app/main/default/objects/Depot_Area__c/Depot_Area__c.object-meta.xml
<CustomObject>
    <description>StarTrack: Capture Depot Area information</description>
    <label>Depot Area</label>
    <nameField>
        <label>Depot Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depot Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>