force-app/main/default/objects/Depot_Area__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>StarTrack: Capture &quot;Area&quot; Information</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Book Ins</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Dangerous Goods</fullName>
            </value>
            <value>
                <fullName>Depot Collection</fullName>
            </value>
            <value>
                <fullName>In Depot/Fleet</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>LDC</fullName>
            </value>
            <value>
                <fullName>Line Haul</fullName>
            </value>
            <value>
                <fullName>Loose Bulk</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>MCL</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Radio Room</fullName>
            </value>
            <value>
                <fullName>Redelivery</fullName>
            </value>
            <value>
                <fullName>Redirection</fullName>
            </value>
            <value>
                <fullName>Refused/RTS</fullName>
            </value>
            <value>
                <fullName>Searches</fullName>
            </value>
            <value>
                <fullName>Special Services</fullName>
            </value>
            <value>
                <fullName>Unaddressed/Unidentified/Damaged Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>