force-app/main/default/objects/Depot_Area__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <description>StarTrack: capture depot information for depot areas.</description>
    <label>Depot</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Depot Areas</relationshipLabel>
    <relationshipName>Depot_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>