force-app/main/default/objects/Depot_Area__c/fields/Escalation_Contact_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact_Phone_1__c</fullName>
    <description>Escalation contact number for the depot area</description>
    <inlineHelpText>Escalation contact number for the depot area</inlineHelpText>
    <label>Escalation Contact Phone 1</label>
    <type>Phone</type>
</CustomField>