force-app/main/default/objects/Depot_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Depot__c</columns>
    <columns>Used_for_Tasking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>